--- a/cards.html
+++ b/cards.html
@@ -115,11 +115,11 @@
   <div class="card-container">
     <!-- First Row -->
     <div class="card">
-      <img src="card1.jpg" alt="Card 1 Image">
+      <img src="au-bank-altura-plus-credit-card.jpeg" alt="Card 1 Image">
       <div class="card-body">
-        <h3>Platinum Credit Card</h3>
+        <h3>AU Small Finance Bank Credit Cards</h3>
         <p>Exclusive rewards, low interest rates, travel benefits.</p>
-        <button onclick="window.location.href='platinum-info.html'">Know More</button>
+        <button onclick="window.location.href='aualtura.html'">Know More</button>
       </div>
     </div>
 
