--- a/cards.html
+++ b/cards.html
@@ -124,85 +124,85 @@
     </div>
 
     <div class="card">
-      <img src="card2.jpg" alt="Card 2 Image">
+      <img src="Millennia.jpeg" alt="Card 2 Image">
       <div class="card-body">
-        <h3>Gold Credit Card</h3>
+        <h3>IDFC BANK Credit Card</h3>
         <p>High rewards for shopping and dining, with cash-back offers.</p>
         <button onclick="window.location.href='gold-info.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card3.jpg" alt="Card 3 Image">
+      <img src="induslnd platinum credit card.jpeg.jpg" alt="Card 3 Image">
       <div class="card-body">
-        <h3>Silver Credit Card</h3>
+        <h3>Indusind bank Credit Card</h3>
         <p>Great savings on fuel, perfect for daily purchases.</p>
-        <button onclick="window.location.href='silver-info.html'">Know More</button>
+        <button onclick="window.location.href='indusindcard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card4.jpg" alt="Card 4 Image">
+      <img src="icici bank ferrari credit card.jpg" alt="Card 4 Image">
       <div class="card-body">
-        <h3>Travel Credit Card</h3>
+        <h3>ICICI BANK Credit Card</h3>
         <p>Earn miles and points for every purchase abroad.</p>
-        <button onclick="window.location.href='travel-info.html'">Know More</button>
+        <button onclick="window.location.href='icicicard.html'">Know More</button>
       </div>
     </div>
 
     <!-- Second Row -->
     <div class="card">
-      <img src="card5.jpg" alt="Card 5 Image">
+      <img src="hdfc bank regalia credit card.png" alt="Card 5 Image">
       <div class="card-body">
-        <h3>Business Credit Card</h3>
+        <h3>HDFC BANK Credit Card</h3>
         <p>Designed for business spending with high credit limits.</p>
-        <button onclick="window.location.href='business-info.html'">Know More</button>
+        <button onclick="window.location.href='hdfccard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card6.jpg" alt="Card 6 Image">
+      <img src="axis bank privilege credit card.jpeg.jpg" alt="Card 6 Image">
       <div class="card-body">
-        <h3>Cashback Credit Card</h3>
+        <h3>Axis Bank Credit Card</h3>
         <p>Earn cash back on every purchase with no annual fee.</p>
-        <button onclick="window.location.href='cashback-info.html'">Know More</button>
+        <button onclick="window.location.href='axiscard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card7.jpg" alt="Card 7 Image">
+      <img src="Canara corporate credit card.jpg" alt="Card 7 Image">
       <div class="card-body">
-        <h3>Student Credit Card</h3>
+        <h3>Canara Bank Credit Card</h3>
         <p>Perfect for students with no annual fees and rewards on essentials.</p>
-        <button onclick="window.location.href='student-info.html'">Know More</button>
+        <button onclick="window.location.href='canaracard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card8.jpg" alt="Card 8 Image">
+      <img src="Kotak fortune gold credit card.jpeg.jpg" alt="Card 8 Image">
       <div class="card-body">
-        <h3>Luxury Credit Card</h3>
+        <h3>kotak Bank Credit Card</h3>
         <p>Exclusive access to premium lounges, high reward points.</p>
-        <button onclick="window.location.href='luxury-info.html'">Know More</button>
+        <button onclick="window.location.href='kotakcard.html'">Know More</button>
       </div>
     </div>
 
     <!-- Third Row -->
     <div class="card">
-      <img src="card9.jpg" alt="Card 9 Image">
+      <img src="union bank platinum credit card.jpeg.jpg" alt="Card 9 Image">
       <div class="card-body">
-        <h3>Premium Rewards Credit Card</h3>
+        <h3>Union Bank Credit Card</h3>
         <p>Earn double points on all purchases with no cap.</p>
-        <button onclick="window.location.href='premium-info.html'">Know More</button>
+        <button onclick="window.location.href='unioncard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card10.jpg" alt="Card 10 Image">
+      <img src="IOB classic crediit card.jpeg.jpg" alt="Card 10 Image">
       <div class="card-body">
-        <h3>Entertainment Credit Card</h3>
+        <h3>IOB Credit Card</h3>
         <p>Get discounts on movies, concerts, and events with every swipe.</p>
-        <button onclick="window.location.href='entertainment-info.html'">Know More</button>
+        <button onclick="window.location.href='iobcard.html'">Know More</button>
       </div>
     </div>
 
