--- a/gold-info.html
+++ b/gold-info.html
@@ -206,7 +206,7 @@
                         <div class="card-name">IDFC FIRST Millennia</div>
                     </div>
                     <div class="slide">
-                        <img src="select.png" alt="Select Card Image">
+                        <img src="idfcselect.jpeg" alt="Select Card Image">
                         <div class="card-name">IDFC FIRST Select</div>
                     </div>
                     <div class="slide">
