--- a/icicicard.html
+++ b/icicicard.html
@@ -256,7 +256,7 @@
         <!-- Right Section - Brand Ambassador Banner -->
         <div class="right-section">
             <div class="banner">
-                <img src="MS-Dhoni-ICICI.png" alt="Brand Ambassador Banner">
+                <img src="icicibrand.jpg" alt="Brand Ambassador Banner">
             </div>
         </div>
     </div>
