--- a/kotakcard.html
+++ b/kotakcard.html
@@ -202,7 +202,7 @@
             <div class="card-slider">
                 <div class="slides">
                     <div class="slide">
-                        <img src="Kotak 811 #dreamdifferent credit card.png" alt="Kotak PVR Platinum Card">
+                        <img src="Kotak-royale signature-Credit-Card-2.png" alt="Kotak PVR Platinum Card">
                         <div class="card-name">Kotak PVR Platinum Card</div>
                     </div>
                     <div class="slide">
@@ -214,7 +214,7 @@
                         <div class="card-name">Kotak World Credit Card</div>
                     </div>
                     <div class="slide">
-                        <img src="Kotak-royale signature-Credit-Card-2.png" alt="Kotak International Card">
+                        <img src="Kotak" alt="kotak-league-platinum-credit-card-1024x695.jpg">
                         <div class="card-name">Kotak International Card</div>
                     </div>
                 </div>
