--- a/cards.html
+++ b/cards.html
@@ -207,57 +207,57 @@
     </div>
 
     <div class="card">
-      <img src="card11.jpg" alt="Card 11 Image">
+      <img src="boicard.jpg" alt="Card 11 Image">
       <div class="card-body">
-        <h3>Travel Elite Credit Card</h3>
+        <h3>Bank of India Credit Card</h3>
         <p>Special travel perks including free airport lounge access worldwide.</p>
-        <button onclick="window.location.href='travel-elite-info.html'">Know More</button>
+        <button onclick="window.location.href='boicard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card12.jpg" alt="Card 12 Image">
+      <img src="sbi bpcl octane credit card.jpeg.jpg" alt="Card 12 Image">
       <div class="card-body">
-        <h3>Family Credit Card</h3>
+        <h3>State Bank Of India Credit Card</h3>
         <p>Share your credit limit with family members for a single bill.</p>
-        <button onclick="window.location.href='family-info.html'">Know More</button>
+        <button onclick="window.location.href='sbicard.html'">Know More</button>
       </div>
     </div>
 
     <!-- Fourth Row -->
     <div class="card">
-      <img src="card13.jpg" alt="Card 13 Image">
+      <img src="bank of baroda premier credit card.jpeg.jpg" alt="Card 13 Image">
       <div class="card-body">
-        <h3>Eco-Friendly Credit Card</h3>
+        <h3>Bank of Baroda Credit Card</h3>
         <p>Earn rewards for sustainable purchases and eco-friendly habits.</p>
-        <button onclick="window.location.href='eco-info.html'">Know More</button>
+        <button onclick="window.location.href='bobcard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card14.jpg" alt="Card 14 Image">
+      <img src="federal bank imperio cd.jpg" alt="Card 14 Image">
       <div class="card-body">
-        <h3>Smart Shopper Credit Card</h3>
+        <h3>Federal Bank Credit Card</h3>
         <p>Extra rewards for grocery and retail purchases.</p>
-        <button onclick="window.location.href='smart-shopper-info.html'">Know More</button>
+        <button onclick="window.location.href='federalcard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card15.jpg" alt="Card 15 Image">
+      <img src="pnb global gold credit card.jpeg.jpg" alt="Card 15 Image">
       <div class="card-body">
-        <h3>Low Interest Credit Card</h3>
+        <h3>Punjab National Bank Credit Card</h3>
         <p>Save on interest with the lowest rates in the market.</p>
-        <button onclick="window.location.href='low-interest-info.html'">Know More</button>
+        <button onclick="window.location.href='pnbcard.html'">Know More</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="card16.jpg" alt="Card 16 Image">
+      <img src="yes first.jpeg" alt="Card 16 Image">
       <div class="card-body">
-        <h3>Fuel Saver Credit Card</h3>
+        <h3>Yes bank Credit Card</h3>
         <p>Earn points and discounts on fuel purchases across major stations.</p>
-        <button onclick="window.location.href='fuel-saver-info.html'">Know More</button>
+        <button onclick="window.location.href='yescard.html'">Know More</button>
       </div>
     </div>
   </div>
