--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #bd8787;
             background-color: #f8f8f8;
             animation: fadeIn 1s ease-out;
         }
@@ -684,6 +684,9 @@
                     <li><a href="demat-account.html">D-MAT ACCOUNTS</a></li>
                     <li><a href="cards.html">CREDIT CARDS</a></li>
                     <li><a href="loan.html">LOAN</a></li>
+                    <li><a href="help.html">HELP</a></li>
+                    <li><a href="login.html">LOGIN</a></li>
+                        
                 </ul>
             </nav>
         </div>
