--- a/login.html
+++ b/login.html
@@ -104,20 +104,63 @@
 		</div>
 	</div>
 	
-	<div class="inputGroup inputGroup1">
-		<label for="email1">Email</label>
-		<input type="text" id="email" class="email" maxlength="256"/>
-		<p class="helper helper1">email@domain.com</p>
-		<span class="indicator"></span>
-	</div>
-	<div class="inputGroup inputGroup2">
-		<label for="password">Password</label>
-		<input type="password" id="password" class="password" />
-	</div>
-	<div class="inputGroup inputGroup3">
-        <button href="index.html" target="_blank" class="open-account">Log in </a>
-
-	</div>	
+	<body>
+		<div class="container">
+			<h2>Login</h2>
+			<form id="loginForm">
+				<div class="form-group">
+					<label for="email">Email:</label>
+					<input type="email" id="email" name="email" placeholder="Enter your email" required>
+				</div>
+				<div class="form-group">
+					<label for="password">Password:</label>
+					<input type="password" id="password" name="password" placeholder="Enter your password" required>
+				</div>
+				<a href="register.html">Don't have an account? Register</a>
+				<button type="submit">Login</button>
+				<div id="error-message" style="color: red; display: none;">Wrong password or not registered.</div>
+			
+			</form>
+			<div id="error-message" class="error-message"></div>
+		</div>
+		<script>
+			// Handle the login process
+			document.getElementById("loginForm").addEventListener("submit", function (event) {
+				event.preventDefault(); // Prevent form from submitting
+	
+				// Get the email and password entered by the user
+				const email = document.getElementById("email").value;
+				const password = document.getElementById("password").value;
+	
+				// Check if email and password are stored in localStorage
+				const storedEmail = localStorage.getItem("email");
+				const storedPassword = localStorage.getItem("password");
+	
+				if (email === storedEmail && password === storedPassword) {
+					// Redirect to index.html if credentials match
+					window.location.href = "index.html";
+				} else {
+					// Show error message if login fails
+					document.getElementById("error-message").style.display = "block";
+				}
+			});
+	
+			// Function to register a new user (for testing purposes)
+			function registerUser() {
+				const email = prompt("Enter your email:");
+				const password = prompt("Enter your password:");
+				
+				// Store the email and password in localStorage
+				localStorage.setItem("email", email);
+				localStorage.setItem("password", password);
+				
+				alert("Registration successful! Now you can log in.");
+			}
+	
+			// Example call to register a user (you can trigger this in your actual registration page)
+			// registerUser();
+		</script>
+	</body>
 </form>
 
 
