--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #100909;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,7 +18,7 @@
             overflow: hidden;
         }
         .container {
-            background-color: white;
+            background-color: rgb(219, 190, 5);
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
         }
         .container h1 {
             font-size: 32px;
-            color: #007BFF;
+            color: #000000;
             margin-bottom: 20px;
             position: relative;
             animation: bounceIn 1s ease;
@@ -43,7 +43,7 @@
             font-size: 16px;
         }
         button {
-            background-color: #007BFF;
+            background-color: #000000;
             color: white;
             padding: 15px;
             width: 100%;
@@ -55,7 +55,7 @@
             transition: background-color 0.3s ease;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #e800c9;
         }
     </style>
 </head>
