--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
         
         section {
             padding: 80px 0;
-            background-color: white;
+            background-color: rgb(0, 0, 0);
             position: relative;
             overflow: hidden;
         }
@@ -28,7 +28,7 @@
         section h2 {
             text-align: center;
             margin-bottom: 50px;
-            color: #1a1a1a;
+            color: #ececec;
             font-size: 2.5rem;
             text-transform: uppercase;
             letter-spacing: 2px;
